--- a/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
+++ b/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
@@ -1,4 +1,15 @@
 {
+  "key.categories.inventoryessentials": "Inventory Essentials",
+  "key.inventoryessentials.single_transfer": "Transfer one",
+  "key.inventoryessentials.bulk_transfer": "Transfer all of type",
+  "key.inventoryessentials.bulk_transfer_modifier": "Transfer all of type (Hold)",
+  "key.inventoryessentials.bulk_transfer_all": "Transfer all",
+  "key.inventoryessentials.bulk_transfer_all_modifier": "Transfer all (Hold)",
+  "key.inventoryessentials.bulk_drop": "Bulk Drop",
+  "key.inventoryessentials.bulk_drop_modifier": "Bulk Drop (Hold)",
+  "key.inventoryessentials.screen_bulk_drop": "Bulk Drop out of Screen (Hold)",
+  "key.inventoryessentials.drag_transfer": "Transfer on Hover (Hold)",
+
   "config.inventoryessentials.title": "Inventory Essentials",
   "config.inventoryessentials.forceClientImplementation": "Force Client Implementation (dev only)",
   "config.inventoryessentials.forceClientImplementation.tooltip": "Use the client implementation even on servers that have the mod installed - only useful for development purposes.",
@@ -10,8 +21,12 @@
   "config.inventoryessentials.enableBulkTransferAll.tooltip": "Should space-clicking an item move all items from that inventory at once?",
   "config.inventoryessentials.enableBulkDrop": "Enable Bulk Drop",
   "config.inventoryessentials.enableBulkDrop.tooltip": "Should shift-ctrl-drop-clicking drop all items of the same type at once?",
+  "config.inventoryessentials.enableScreenBulkDrop": "Enable Bulk Drop out of Screen",
+  "config.inventoryessentials.enableScreenBulkDrop.tooltip": "Should shift-clicking outside of the screen drop all items of the same type at once?",
   "config.inventoryessentials.allowBulkTransferAllOnEmptySlot": "Allow Transfer All on Empty Slot",
-  "config.inventoryessentials.allowBulkTransferAllOnEmptySlot.tooltip": "Should space-clicking move all items even if an empty slot was clicked?",
-  "config.inventoryessentials.enableShiftDrag": "Enable Shift Drag",
-  "config.inventoryessentials.enableShiftDrag.tooltip": "Should holding shift and moving your mouse over items quick-transfer them without requiring each to be clicked?"
+  "config.inventoryessentials.allowBulkTransferAllOnEmptySlot.tooltip": "Should Transfer All move all items even if an empty slot was clicked?",
+  "config.inventoryessentials.enableShiftDrag": "Enable Transfer on Hover",
+  "config.inventoryessentials.enableShiftDrag.tooltip": "Should holding shift and moving your mouse over items quick-transfer them without requiring each to be clicked?",
+  "config.inventoryessentials.whereDidTheConfigsGo": "Configs moved to Controls",
+  "config.inventoryessentials.whereDidTheConfigsGo.tooltip": "You can now go into your Controls and unbind the respective Inventory Essentials keys instead!"
 }
