fix: Add missing modifier keybind lang in Fabric

--- a/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
+++ b/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
@@ -7,6 +7,7 @@
   "key.inventoryessentials.bulk_transfer_all_modifier": "Transfer all (Hold)",
   "key.inventoryessentials.bulk_drop": "Bulk Drop",
   "key.inventoryessentials.bulk_drop_modifier": "Bulk Drop (Hold)",
+  "key.inventoryessentials.bulk_drop_modifier_1": "Bulk Drop (Hold)",
   "key.inventoryessentials.screen_bulk_drop": "Bulk Drop out of Screen (Hold)",
   "key.inventoryessentials.drag_transfer": "Transfer on Hover (Hold)",
 
