fix: Fix keybind language keys, make mappings never conflict

--- a/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
+++ b/shared/src/main/resources/assets/inventoryessentials/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "key.categories.inventoryessentials": "Inventory Essentials",
   "key.inventoryessentials.single_transfer": "Transfer one",
+  "key.inventoryessentials.single_transfer_modifier": "Transfer one (Hold)",
   "key.inventoryessentials.bulk_transfer": "Transfer all of type",
   "key.inventoryessentials.bulk_transfer_modifier": "Transfer all of type (Hold)",
+  "key.inventoryessentials.bulk_transfer_modifier_1": "Transfer all of type (Hold)",
   "key.inventoryessentials.bulk_transfer_all": "Transfer all",
   "key.inventoryessentials.bulk_transfer_all_modifier": "Transfer all (Hold)",
   "key.inventoryessentials.bulk_drop": "Bulk Drop",
@@ -14,20 +16,8 @@
   "config.inventoryessentials.title": "Inventory Essentials",
   "config.inventoryessentials.forceClientImplementation": "Force Client Implementation (dev only)",
   "config.inventoryessentials.forceClientImplementation.tooltip": "Use the client implementation even on servers that have the mod installed - only useful for development purposes.",
-  "config.inventoryessentials.enableSingleTransfer": "Enable Single Transfer",
-  "config.inventoryessentials.enableSingleTransfer.tooltip": "Should ctrl-clicking only move one item at a time instead of the full stack?",
-  "config.inventoryessentials.enableBulkTransfer": "Enable Bulk Transfer",
-  "config.inventoryessentials.enableBulkTransfer.tooltip": "Should shift-ctrl-clicking move all items of the same type at once?",
-  "config.inventoryessentials.enableBulkTransferAll": "Enable Transfer All",
-  "config.inventoryessentials.enableBulkTransferAll.tooltip": "Should space-clicking an item move all items from that inventory at once?",
-  "config.inventoryessentials.enableBulkDrop": "Enable Bulk Drop",
-  "config.inventoryessentials.enableBulkDrop.tooltip": "Should shift-ctrl-drop-clicking drop all items of the same type at once?",
-  "config.inventoryessentials.enableScreenBulkDrop": "Enable Bulk Drop out of Screen",
-  "config.inventoryessentials.enableScreenBulkDrop.tooltip": "Should shift-clicking outside of the screen drop all items of the same type at once?",
   "config.inventoryessentials.allowBulkTransferAllOnEmptySlot": "Allow Transfer All on Empty Slot",
   "config.inventoryessentials.allowBulkTransferAllOnEmptySlot.tooltip": "Should Transfer All move all items even if an empty slot was clicked?",
-  "config.inventoryessentials.enableShiftDrag": "Enable Transfer on Hover",
-  "config.inventoryessentials.enableShiftDrag.tooltip": "Should holding shift and moving your mouse over items quick-transfer them without requiring each to be clicked?",
   "config.inventoryessentials.whereDidTheConfigsGo": "Configs moved to Controls",
   "config.inventoryessentials.whereDidTheConfigsGo.tooltip": "You can now go into your Controls and unbind the respective Inventory Essentials keys instead!"
 }
